[package]
name = "tokio-rkyv"
version = "0.9.0"
edition = "2021"
authors = [
    "Sven Cattell <me@carllerche.com>",
]
license = "MIT OR Apache-2.0"
readme = "README.md"
categories = ["asynchronous", "encoding"]
keywords = ["async", "serde", "serialization"]
repository = "https://github.com/carllerche/tokio-serde"
homepage = "https://github.com/carllerche/tokio-serde"
documentation = "https://docs.rs/tokio-serde"
description = """
Send and receive rkyv encodable types over the network using Tokio.

This library is used as a building block for serialization format specific
libraries.

Forked from tokio-serde. 
"""

[dependencies]
bytes = "1.0"
futures-core = "0.3"
futures-sink = "0.3"
pin-project = "1"
rkyv = { version = "0.7.44", features = ["validation", "bytecheck"] }

[dev-dependencies]
futures = "0.3"
impls = "1"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
static_assertions = "1.1.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "client"

[[example]]
name = "server"
